# pico_projects

./: LICENSE  README.md
pico_temp/: main.py  pyproject.toml  scratch.ipynb
